--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
                                     </clipPath>
                                 </defs>
                             </svg>
-                            <img class="appIconLarge" src="{{ site.app_icon }}">
+                            <img class="appIconLarge" src="{{ site.app_icon | relative_url }}">
                         </div>
                         <div class="appNamePriceContainer">
                             <h1 class="appName">
@@ -54,7 +54,12 @@
                             {% if site.playstore_link %}
                                 <a class="playStoreLink" href="{{site.playstore_link}}"><img class="playStore" src="assets/playstore.png"></a>
                             {% endif %}
-                            <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png"></a>
+                            {% if site.fdroid_link %}
+                                <a class="appStoreLink" href="{{site.fdroid_link}}"><img class="appStore" src="assets/fdroid.png"></a>
+                            {% endif %}
+                            {% if site.appstore_link %}
+                                <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png"></a>
+                            {% endif %}
                         </div>
                     </div>
                     {% include features.html %}
