--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -13,6 +13,9 @@
 	background-position: top;
 	border-radius: 0px 0px 40px 40px;
 
+	@media only screen and (max-width: 768px) {
+		border-radius: 0px 0px 15px 15px;
+	}
 }
 
 .headerBackground {
