--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer>
+	{% if page.layout == 'default' %}
 	{% if site.your_name %}
 	<p class="footerText">Made by {% if site.your_link %}<a href="{{ site.your_link }}">{% endif %}{{ site.your_name }}{% if site.your_link %}</a>{% endif %}{% if site.your_city %} in {{ site.your_city }}{% endif %}</p>
 	{% endif %}
@@ -48,8 +49,9 @@
 				</span>
 			</a>
 		{% endif %}
-
 	</div>
+	{% endif %}
+
 	<div class="footerLinks">
 		{% for page in site.pages %}
 			<a href="{{ page.url | relative_url }}" target="_self">{{ page.title }}</a>
