--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,11 +5,11 @@
 
 	<title class="pageTitle">
 		{% if page.title and page.title != empty -%}
-			{{ page.title }} &verbar;
+			{{ page.title }} &VerticalSeparator;
 		{%- endif %} {{ site.page_title }}
 	</title>
 	<meta name="description" content="{{ site.app_description }}">
-
+	<link rel="canonical" href="{{ page.url | absolute_url }}">
 	<link rel="shortcut icon" href="{{ site.app_icon | relative_url }}">
 
 	<!-- Smart App Banner -->
